[package]
name = "concurrent_roaring"
version = "0.1.0"
edition = "2021"

[dependencies]
# Normal (not dev) dependency: the `datasets` module lives in library code (src/bitmap.rs per
# §2.1) and the P7 `src/bin/scaling.rs` binary also consumes it — neither can see dev-deps.
rand = "0.9"
# Why parking_lot over std::sync: no lock poisoning (no `.unwrap()` on every access) and a faster
# uncontended path — exactly what the P7 concurrency-tax measurement stresses.
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
roaring = "0.10"

[[bench]]
name = "sequential"
harness = false
