[package]
name = "concurrent_roaring"
version = "0.1.0"
edition = "2021"

[dependencies]
# Normal (not dev) dependency: the `datasets` module lives in library code (src/bitmap.rs per
# §2.1) and the P7 `src/bin/scaling.rs` binary also consumes it — neither can see dev-deps.
rand = "0.9"
# Why parking_lot over std::sync: no lock poisoning (no `.unwrap()` on every access) and a faster
# uncontended path — exactly what the P7 concurrency-tax measurement stresses.
parking_lot = "0.12"
# P8a: lock-free read path — readers load an immutable snapshot pointer via `ArcSwap` with no lock.
arc-swap = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
roaring = "0.10"

# Fat LTO + one codegen unit: lets the hot container/bitmap paths inline across crate boundaries
# into the bench and scaling binaries. Applies equally to ours and the `roaring` reference (same
# binary), so Baseline-B comparisons stay fair; build-time cost is irrelevant at this crate size.
[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "sequential"
harness = false
