[package]
name = "concurrent_roaring"
version = "0.1.0"
edition = "2021"

[dependencies]
# Normal (not dev) dependency: the `datasets` module lives in library code and the scaling
# binary also consumes it — neither can see dev-deps.
rand = "0.9"
# parking_lot over std::sync: no lock poisoning (no `.unwrap()` on every access) and a faster
# uncontended path.
parking_lot = "0.12"
# Lock-free read path: readers load an immutable snapshot pointer via `ArcSwap` with no lock.
arc-swap = "1"
# Lock-free read path with epoch-based reclamation: readers pin an epoch and load an `Atomic`
# pointer; retired snapshots are freed via `defer_destroy` once no pinned reader can observe them.
crossbeam-epoch = "0.9"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
roaring = "0.10"

# Fat LTO + one codegen unit: lets the hot container/bitmap paths inline across crate boundaries
# into the bench and scaling binaries. Applies equally to ours and the `roaring` reference in the
# same binary, so the comparison stays fair; build-time cost is irrelevant at this crate size.
[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "sequential"
harness = false
